Readme.MD update

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "93762b4a",
    "metadata": {},
    "outputs": [
@@ -16,30 +16,30 @@
     {
      "data": {
       "text/plain": [
-       "[array([[60.23852802]]),\n",
-       " array([[53.81220164]]),\n",
-       " array([[53.81220164]]),\n",
-       " array([[54.76788695]]),\n",
-       " array([[53.81220164]]),\n",
-       " array([[51.90083101]]),\n",
-       " array([[53.81220164]]),\n",
-       " array([[57.63494289]]),\n",
-       " array([[55.72357227]]),\n",
-       " array([[58.59062821]])]"
+       "[array([[38.44222947]]),\n",
+       " array([[35.46793899]]),\n",
+       " array([[35.46793899]]),\n",
+       " array([[36.03995463]]),\n",
+       " array([[35.46793899]]),\n",
+       " array([[34.32390772]]),\n",
+       " array([[35.46793899]]),\n",
+       " array([[37.75600153]]),\n",
+       " array([[36.61197026]]),\n",
+       " array([[38.32801717]])]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from FeedForward import feed_forward\n",
+    "from src.FeedForward import feed_forward\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "data = pd.read_csv('./clean_weather.csv', index_col=[0])\n",
+    "data = pd.read_csv('./Data/clean_weather.csv', index_col=[0])\n",
     "\n",
     "data = data.ffill()\n",
     "data = data['tmax'].head(10)\n",
