--- a/test.ipynb
+++ b/test.ipynb
@@ -2,33 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "93762b4a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 1)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([[38.44222947]]),\n",
-       " array([[35.46793899]]),\n",
-       " array([[35.46793899]]),\n",
-       " array([[36.03995463]]),\n",
-       " array([[35.46793899]]),\n",
-       " array([[34.32390772]]),\n",
-       " array([[35.46793899]]),\n",
-       " array([[37.75600153]]),\n",
-       " array([[36.61197026]]),\n",
-       " array([[38.32801717]])]"
+       "1970-01-01    60.0\n",
+       "1970-01-02    52.0\n",
+       "1970-01-03    52.0\n",
+       "Name: tmax, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,24 +29,73 @@
     "data = pd.read_csv('./Data/clean_weather.csv', index_col=[0])\n",
     "\n",
     "data = data.ffill()\n",
-    "data = data['tmax'].head(10)\n",
-    "data\n",
+    "data = data['tmax'].head(3)\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d0bbf51f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------ [60. 52. 52.]\n",
+      "(3, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1.8443545]]), array([[1.8443544]]), array([[1.8443544]])]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
-    "feed_forward(num_neurons=3, data = data)"
+    "outputs = feed_forward(num_neurons=3, data = data, out_neurons=1)\n",
+    "outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0ec9e664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mse(actual, predicted):\n",
+    "    return (np.mean(actual-predicted)**2)\n",
+    "\n",
+    "\n",
+    "def mse_grad(actual,pred):\n",
+    "    return (pred - actual)\n",
+    "\n",
+    "actuals = np.array([72, 62, 65])\n",
+    "loss_grad = mse_grad(actuals, outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fb95721b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src import backProp, feedForward"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec9e664",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2de0e7f",
+   "id": "042e8620",
    "metadata": {},
    "outputs": [],
    "source": []
